--- a/EnedisToCramMailGit.html
+++ b/EnedisToCramMailGit.html
@@ -1,4 +1,4 @@
-"<!DOCTYPE html>
+<!DOCTYPE html>
 <html
   xmlns:v="urn:schemas-microsoft-com:vml"
   xmlns:o="urn:schemas-microsoft-com:office:office"
@@ -574,4 +574,3 @@
     <div style="background-color: transparent"></div>
   </body>
 </html>
-"
